# programming_lab_2

./: CMakeLists.txt  fun.cpp  fun.h  main.cpp  tests.cpp
.github/workflows/: release.yml
